[gd_scene load_steps=15 format=3 uid="uid://xumfropcot62"]

[ext_resource type="TileSet" uid="uid://iga47b5fiujd" path="res://Assets/tileSet.tres" id="1_0q3is"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_5bmjq"]
[ext_resource type="PackedScene" uid="uid://bys67aluqyox4" path="res://Scenes/player.tscn" id="2_nuvfg"]
[ext_resource type="Theme" uid="uid://cpwjiok04og8e" path="res://Assets/theme.tres" id="4_7m6mf"]
[ext_resource type="PackedScene" uid="uid://csd6ikilylmnc" path="res://Scenes/wizard.tscn" id="4_gi0r6"]
[ext_resource type="Script" path="res://Scripts/map.gd" id="4_hw6v4"]
[ext_resource type="Script" path="res://Scripts/Guide.gd" id="5_b7ms5"]
[ext_resource type="PackedScene" uid="uid://vlj7bhi0c4gq" path="res://Scenes/barrel.tscn" id="6_tdxaa"]
[ext_resource type="PackedScene" uid="uid://c7nchaclmj50b" path="res://Scenes/door.tscn" id="8_e8xbr"]
[ext_resource type="AudioStream" uid="uid://bh817numofi4d" path="res://Assets/Voice Lines/intro.wav" id="10_4pg62"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpmyv"]
size = Vector2(127.5, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rm47l"]
size = Vector2(129, 47)

[sub_resource type="CircleShape2D" id="CircleShape2D_ofm65"]
radius = 43.1856

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eush"]
size = Vector2(110, 89)

[node name="Main" type="Node2D"]
script = ExtResource("1_5bmjq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -23776.0
offset_top = -15145.0
offset_right = 24581.0
offset_bottom = 16029.0
color = Color(0.0781567, 0.0781567, 0.0703441, 1)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("1_0q3is")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(524292, 327680, 1, 458756, 524288, 2, 524293, 327680, 1, 524291, 458752, 13, 458755, 524288, 2, 589829, 327680, 1, 589828, 327680, 1, 524294, 327680, 1, 589830, 327680, 1, 524295, 327680, 1, 589831, 327680, 1, 458759, 524288, 2, 524296, 327680, 1, 589832, 327680, 1, 589827, 327680, 1, 655363, 327680, 1, 655362, 262144, 1, 589826, 589824, 1, 655364, 327680, 1, 786438, 589824, 13, 786437, 524288, 13, 720900, 327680, 1, 524290, 589824, 1, 458754, 262144, 0, 851977, 327680, 1, 851976, 589824, 0, 917514, 327680, 1, 917513, 589824, 0, 917515, 327680, 1, 655372, 851968, 1, 589836, 655360, 5, 524300, 851968, 0, 458760, 524288, 2, 524297, 327680, 1, 458761, 327680, 0, 589833, 327680, 1, 655368, 327680, 1, 720904, 327680, 1, 786440, 327680, 1, 786439, 327680, 1, 851975, 524288, 0, 720899, 327680, 1, 720898, 589824, 1, 786435, 589824, 0, 786434, 262144, 2, 786436, 327680, 1, 851972, 524288, 0, 851971, 262144, 2, 851973, 327680, 2, 851974, 524288, 0, 458757, 524288, 2, 458758, 262144, 3, 655365, 327680, 1, 655366, 327680, 1, 720901, 524288, 12, 720902, 589824, 12, 720903, 327680, 1, 655367, 327680, 1, 458762, 524288, 2, 524298, 327680, 1, 589834, 327680, 1, 458763, 393216, 0, 524299, 458752, 1, 589835, 393216, 1, 655370, 327680, 1, 655371, 458752, 1, 720906, 327680, 1, 786442, 327680, 1, 720905, 327680, 1, 786441, 327680, 1, 655369, 327680, 1, 851978, 327680, 1, 983050, 327680, 2, 983049, 262144, 2, 983051, 589824, 0, 917516, 458752, 0, 983052, 458752, 2, 1048588, 589824, 0, 1048587, 262144, 2, 983053, 524288, 2, 1048589, 327680, 1, 1114125, 327680, 2, 1114124, 262144, 2, 1048590, 458752, 0, 1114126, 393216, 2, 983054, 327680, 1, 1048591, 393216, 2, 983055, 458752, 0, 917518, 589824, 0, 917519, 458752, 2, 983056, 393216, 2, 917520, 393216, 0, 851982, 458752, 2, 851983, 393216, 0, 917517, 262144, 2, 851981, 262144, 1, 917512, 262144, 2, 786445, 262144, 0, 720907, 458752, 1, 786443, 458752, 1, 851979, 458752, 2, 851980, 327680, 0, 1179662, 3, 0, 1179661, 3, 0, 1179660, 3, 0, 1179659, 3, 0, 1114123, 3, 0, 1114122, 3, 0, 1048586, 3, 0, 1048585, 3, 0, 1048584, 3, 0, 983048, 3, 0, 983047, 3, 0, 917511, 3, 0, 1114127, 3, 0, 917510, 3, 0, 917509, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 851970, 3, 0)
layer_1/name = "Walls"
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array(327682, 0, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 131072, 0, 327687, 0, 0, 327688, 65536, 4, 262150, 196608, 0, 393222, 196608, 1, 327689, 131072, 0, 327690, 0, 10, 327691, 65536, 10, 327692, 262144, 5, 262156, 262144, 4, 393228, 262144, 5, 458764, 262144, 5, 524300, 262144, 5, 589836, 262144, 5, 720908, 0, 4, 720910, 65536, 0, 720909, 65536, 0, 786447, 196608, 15, 655375, 196608, 0, 262145, 196608, 4, 327681, 196608, 5, 393217, 196608, 5, 458753, 196608, 5, 524289, 196608, 5, 589825, 196608, 5, 655361, 196608, 5, 720897, 196608, 5, 786433, 196608, 5, 655376, 262144, 4, 720912, 262144, 5, 786448, 262144, 5, 851984, 262144, 5, 917520, 262144, 5, 983056, 262144, 5, 1048592, 262144, 5, 851970, 131072, 3, 917507, 65536, 3, 917508, 65536, 3, 917509, 65536, 3, 917510, 65536, 3, 1048585, 65536, 3, 1179660, 65536, 3, 1179661, 65536, 3, 1179662, 65536, 3, 1114127, 0, 3, 917511, 131072, 3, 983048, 131072, 3, 1048586, 131072, 3, 1114123, 131072, 3, 1179659, 196608, 6, 1114122, 196608, 6, 1048584, 196608, 6, 983047, 196608, 6, 917506, 196608, 6, 1179663, 262144, 6, 1114128, 262144, 6, 851969, 196608, 6)
layer_2/name = "Decorations"
layer_2/tile_data = PackedInt32Array(917517, 196608, 19, 786445, 262144, 18, 393219, 589825, 1, 327683, 589825, 0, 720899, 65537, 2)
script = ExtResource("4_hw6v4")

[node name="Guide0" type="Label" parent="."]
offset_left = 42.0
offset_top = 125.0
offset_right = 105.0
offset_bottom = 133.0
theme = ExtResource("4_7m6mf")
theme_override_font_sizes/font_size = 6
text = "Welcome to BreakOut"
script = ExtResource("5_b7ms5")

[node name="Guide0Area" type="Area2D" parent="Guide0"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guide0/Guide0Area"]
position = Vector2(56.25, 15.5)
shape = SubResource("RectangleShape2D_wpmyv")

[node name="Guide1" type="Label" parent="."]
visible = false
offset_left = 61.0
offset_top = 158.0
offset_right = 135.0
offset_bottom = 174.0
theme = ExtResource("4_7m6mf")
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "Your goal is to find a 
loophole out of this place"

[node name="Guide1Area" type="Area2D" parent="Guide1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guide1/Guide1Area"]
position = Vector2(37.5, 22.5)
shape = SubResource("RectangleShape2D_rm47l")

[node name="Guide2" type="Label" parent="."]
visible = false
offset_left = 144.0
offset_top = 186.0
offset_right = 190.0
offset_bottom = 202.0
theme = ExtResource("4_7m6mf")
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "Press E to 
loot this Barrel"

[node name="Guide2Area" type="Area2D" parent="Guide2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guide2/Guide2Area"]
position = Vector2(14, -13)
shape = SubResource("CircleShape2D_ofm65")

[node name="Guide3" type="Label" parent="."]
visible = false
offset_left = 190.0
offset_top = 212.0
offset_right = 242.0
offset_bottom = 228.0
theme = ExtResource("4_7m6mf")
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "And then E
to speak with him"

[node name="Guide3Area" type="Area2D" parent="Guide3"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guide3/Guide3Area"]
position = Vector2(23, 27.5)
shape = SubResource("RectangleShape2D_1eush")

[node name="Barrel" parent="." instance=ExtResource("6_tdxaa")]
position = Vector2(181, 172)
loot_overwrite = "Broom"

[node name="Door" parent="." instance=ExtResource("8_e8xbr")]
position = Vector2(176, 88)
next_scene = "res://Scenes/Levels/level_1.tscn"
id = 1

[node name="Wizard" parent="." instance=ExtResource("4_gi0r6")]
position = Vector2(230, 220)

[node name="AIManager" parent="Wizard" index="5" node_paths=PackedStringArray("player")]
npc_name = "Billy"
character = "a friendly wizard. Your task is to keep the Dungeon clean. However you don't have a broom and you desperately want one. You'll reward the person who gives you a broom."
inventory = ["Key"]
player = NodePath("../../Player")

[node name="Player" parent="." instance=ExtResource("2_nuvfg")]
position = Vector2(67, 153)
motion_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(-1, -16)
stream = ExtResource("10_4pg62")

[connection signal="area_entered" from="Guide0/Guide0Area" to="Guide0" method="_on_guide_0_area_area_entered"]
[connection signal="area_exited" from="Guide0/Guide0Area" to="Guide0" method="_on_guide_0_area_area_exited"]
[connection signal="area_entered" from="Guide1/Guide1Area" to="Guide0" method="_on_guide_1_area_area_entered"]
[connection signal="area_exited" from="Guide1/Guide1Area" to="Guide0" method="_on_guide_1_area_area_exited"]
[connection signal="area_entered" from="Guide2/Guide2Area" to="Guide0" method="_on_guide_2_area_area_entered"]
[connection signal="area_exited" from="Guide2/Guide2Area" to="Guide0" method="_on_guide_2_area_area_exited"]
[connection signal="area_entered" from="Guide3/Guide3Area" to="Guide0" method="_on_guide_3_area_area_entered"]
[connection signal="area_exited" from="Guide3/Guide3Area" to="Guide0" method="_on_guide_3_area_area_exited"]
[connection signal="new_response" from="Wizard/AIManager" to="Player" method="_on_ai_manager_new_response"]
[connection signal="finished" from="Player/AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]

[editable path="Wizard"]
